feat(docker): create Dockerfile
cleanup

--- a/static/index.html
+++ b/static/index.html
@@ -27,12 +27,12 @@
   </div>
   <div class="flex justify-stretch items-stretch gap-1" hx-ext="sse" sse-connect="/sse">
     <div class="bg-success basis-1 grow text-success-content flex flex-col justify-center items-center gap-1">
-      <div class="text-3xl font-extrabold px-4" sse-swap="positive_body"></div>
-      <div class="font-bold" sse-swap="positive_author"></div>
+      <div class="text-3xl text-center font-extrabold px-4" sse-swap="positive_body"></div>
+      <div class="font-bold text-center" sse-swap="positive_author"></div>
     </div>
     <div class="bg-error basis-1 grow text-error-content flex flex-col justify-center items-center gap-1">
-      <div class="text-3xl font-extrabold px-4" sse-swap="negative_body"></div>
-      <div class="font-bold" sse-swap="negative_author"></div>
+      <div class="text-3xl text-center font-extrabold px-4" sse-swap="negative_body"></div>
+      <div class="font-bold text-center" sse-swap="negative_author"></div>
     </div>
   </div>
 </div>
