fix(grpc): client SSL config
add README
add LICENSE

--- a/static/footer.html
+++ b/static/footer.html
@@ -6,7 +6,7 @@
   <nav>
     <h6 class="footer-title">Social</h6>
     <div class="grid grid-flow-col gap-4">
-      <a href="https://github.com/ary82/urlstash" target="_blank" rel="noopener noreferrer">
+      <a href="https://github.com/ary82" target="_blank" rel="noopener noreferrer">
         {{template "icons/github"}}
       </a>
       <a href="https://linkedin.com/in/aryan-goyal1" target="_blank" rel="noopener noreferrer">
