--- a/static/index.html
+++ b/static/index.html
@@ -27,12 +27,16 @@
   </div>
   <div class="flex justify-stretch items-stretch gap-1" hx-ext="sse" sse-connect="/sse">
     <div class="bg-success basis-1 grow text-success-content flex flex-col justify-center items-center gap-1">
-      <div class="text-3xl text-center font-extrabold px-4" sse-swap="positive_body"></div>
-      <div class="font-bold text-center" sse-swap="positive_author"></div>
+      <div class="text-3xl text-center font-extrabold px-4" sse-swap="p_b"></div>
+      <div class="font-bold text-center" sse-swap="p_a"></div>
+      <div class="font-mono p-2 text-lg font-bold text-center"><span sse-swap="p_c"></span> affirmations so far
+      </div>
     </div>
     <div class="bg-error basis-1 grow text-error-content flex flex-col justify-center items-center gap-1">
-      <div class="text-3xl text-center font-extrabold px-4" sse-swap="negative_body"></div>
-      <div class="font-bold text-center" sse-swap="negative_author"></div>
+      <div class="text-3xl text-center font-extrabold px-4" sse-swap="n_b"></div>
+      <div class="font-bold text-center" sse-swap="n_a"></div>
+      <div class="font-mono p-2 text-lg font-bold text-center"><span sse-swap="n_c"></span> insults so far
+      </div>
     </div>
   </div>
 </div>
